# postblox

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOVER.md  LICENSE-APACHE  README.md  SECURITY.md  TASKS.md  clippy.toml  deny.toml  docker-compose.dev.yml  docker-compose.yml  justfile  postblox.toml.example  rustfmt.nightly.toml
.cargo/: audit.toml
.factory/skills/qa/: REPORT-TEMPLATE.md  SKILL.md  config.yaml
.factory/skills/qa-daemon/: SKILL.md
.factory/skills/qa-mcp/: SKILL.md
.factory/skills/qa-tui/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  qa.yml  release.yml
bench/: baseline.md  postbloxd-size-analysis.md  run.sh
crates/postblox-mail/: Cargo.toml
crates/postblox-mail/benches/: parser.rs
crates/postblox-mail/src/: builder.rs  error.rs  lib.rs  parser.rs  reply.rs  reply_extract.rs  threading.rs
crates/postblox-mail/tests/: mail_integration.rs  properties.rs
crates/postblox-mail/tests/fixtures/: attachment_multipart.eml  malformed.eml  non_ascii.eml  thread_chain.eml
deploy/: postblox.toml.example
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  configuration.md  deployment.md  getting-started.md  introduction.md  mcp-tools.md  tui.md
docs/src/api/: README.md  api-keys.md  approvals.md  audit.md  authentication.md  bounces.md  briefing.md  domains.md  drafts.md  inboxes.md  labels.md  linked-accounts.md  messages.md  notifications.md  organizations.md  permissions.md  search.md  threads.md  trust.md  webhooks.md  websocket.md
migrations/: 0001_create_organizations.sql  0001_init.sql  0002_create_api_keys.sql  0002_draft_attachments.sql  0003_create_inboxes.sql  0003_draft_reply_headers.sql  0004_create_threads.sql  0005_create_messages.sql  0006_create_webhooks.sql  0007_create_labels.sql  0008_create_drafts.sql  0009_add_search_vector.sql  0010_create_domains.sql  0011_add_pgvector.sql  0012_add_slop_columns.sql  0013_create_sender_reputation.sql  0014_create_slop_feedback.sql  0015_create_linked_accounts.sql  0016_create_permissions.sql  0017_create_audit_log.sql  0018_create_approvals.sql  0019_create_trust_scores.sql  0020_create_notification_config.sql  0021_drop_trust_scores_score_column.sql  0022_audit_log_composite_index.sql  0023_notification_add_desktop_provider.sql  0024_delivery_status.sql  0025_inbox_active.sql  0026_org_members.sql  0027_org_members_role_index.sql  0028_attachments.sql  0029_attachment_content_id.sql  0030_encrypted_password.sql
plans/: PHASE-00-skeleton.md  PHASE-01-core-email.md  PHASE-02-triage-and-tools.md  PHASE-03-linked-and-search.md  PHASE-04-permissions.md  PHASE-05-mcp-and-dashboard.md  PHASE-06-tui-and-v1.md  R6-qa-checklist.md  R6-qa-results-c922354.md  R6.md  R7.md  rust-skills-review.md
roadmap_guidelines/: ConversationHistory.txt  postbox-competitive-landscape.md  postbox-design.md  postbox-engineering-principles.md  postbox-full-spec.md  postbox-licensing-and-independence.md  postbox-setup-guide.md  postbox-spec-improvements.md  pulse-slopgate-mcp-scope.md  slopgate-vision-addendum.md
src/: attachments.rs  auth.rs  config.rs  lib.rs  main.rs  models.rs  notifications.rs  prelude.rs  storage.rs
src/api/: api_keys.rs  approvals.rs  attachments.rs  audit.rs  auth.rs  bounces.rs  briefing.rs  deliver.rs  domains.rs  drafts.rs  error.rs  feedback.rs  inbound.rs  inboxes.rs  labels.rs  linked_accounts.rs  members.rs  messages.rs  mod.rs  mta_hook.rs  notifications.rs  organizations.rs  permissions.rs  rate_limit.rs  search.rs  threads.rs  trust.rs  webhooks.rs  ws_token.rs
src/cli/: doctor.rs  init.rs  mod.rs
src/core/: content_filter.rs  mod.rs  rules.rs  slop.rs
src/daemon/: dispatcher.rs  mod.rs  op.rs
src/dashboard/: mod.rs  ws.rs
src/db/: accounts.rs  api_keys.rs  approvals.rs  attachments.rs  audit.rs  bounces.rs  briefing.rs  domains.rs  draft_attachments.rs  drafts.rs  embeddings.rs  folders.rs  inboxes.rs  labels.rs  linked_accounts.rs  mcp.rs  members.rs  messages.rs  mod.rs  notifications.rs  organizations.rs  permissions.rs  search.rs  slop.rs  slop_feedback.rs  sql_query.rs  threads.rs  trust.rs  webhooks.rs
src/embeddings/: mod.rs  openai.rs
src/events/: mod.rs  webhooks.rs  websocket.rs
src/hooks/: mod.rs
src/imap/: client.rs  error.rs  mod.rs
src/ipc/: client.rs  hub.rs  mod.rs  protocol.rs  server.rs  wire.rs
src/mail/: builder.rs  error.rs  guard.rs  mod.rs  parser.rs  reply.rs  reply_extract.rs  threading.rs
src/mcp/: client.rs  error.rs  gates.rs  main.rs  mod.rs  protocol.rs  server.rs  sse.rs  tools.rs  transport.rs
src/oauth/: google.rs  mod.rs
src/secrets/: file.rs  keyring.rs  mod.rs
src/smtp/: mod.rs
src/stalwart/: mod.rs
src/sync/: error.rs  imap.rs  manager.rs  mod.rs  reconciler.rs  state.rs  worker.rs
src/tui/: app.rs  client.rs  command.rs  config.rs  event.rs  help.rs  ipc.rs  keys.rs  layout.rs  main.rs  mod.rs  render.rs  state.rs  theme.rs  ws.rs
src/tui/components/: approvals.rs  briefing.rs  compose.rs  drafts.rs  inbox_list.rs  message_list.rs  mod.rs  preview.rs  search.rs  status_bar.rs  thread_panel.rs
static/: compose.js  style.css  upload.js  ws.js
templates/: analytics.html  approvals.html  base.html  briefing.html  inbox_detail.html  inboxes.html  message.html  messages_rows.html  search.html  search_results.html  settings.html  thread.html  unauthorized.html
tests/: api_handlers.rs  daemon_lifecycle.rs  dashboard.rs  db_integration.rs  demo_seed.rs  gmail_oauth_live.rs  ipc_integration.rs  mail_integration.rs  tui_client.rs
tests/common/: mod.rs
tests/fixtures/: multipart.eml  nested_quotes.eml  no_message_id.eml  simple_text.eml
