[package]
name = "postblox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Local-first email TUI + MCP bridge"
license = "MIT"

[[bin]]
name = "postblox"
path = "src/main.rs"

[[bin]]
name = "postbloxd"
path = "src/bin/postbloxd.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
mail-parser = "0.9"
thiserror = "2"
anyhow = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync", "fs", "net", "io-util", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate", "macros"] }
toml = "0.8"
dirs = "6"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
