[package]
name = "postblox"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Local-first email TUI and MCP bridge for AI agents."
authors = ["Nikhil <numbery@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/numbery/postblox"
homepage = "https://github.com/numbery/postblox"
documentation = "https://docs.rs/postblox"
readme = "README.md"
keywords = ["email", "imap", "tui", "mcp", "sqlite"]
categories = ["email", "command-line-utilities", "database"]
include = [
    "src/**/*.rs",
    "crates/postblox-mail/**",
    "migrations/**/*.sql",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md",
]

[workspace]
resolver = "2"
members = ["crates/postblox-mail"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
repository = "https://github.com/numbery/postblox"
homepage = "https://github.com/numbery/postblox"
documentation = "https://docs.rs/postblox"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
mail-parser = "0.9"
thiserror = "2"
base64 = "0.22"

[[bin]]
name = "postblox"
path = "src/main.rs"

[[bin]]
name = "postbloxd"
path = "src/bin/postbloxd.rs"

[[bin]]
name = "postblox-mcp"
path = "src/bin/postblox-mcp.rs"

[[bin]]
name = "postblox-bench"
path = "src/bin/postblox-bench.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
mail-parser = { workspace = true }
thiserror = { workspace = true }
postblox-mail = { path = "crates/postblox-mail" }
anyhow = "1"
base64 = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync", "fs", "net", "io-util", "io-std", "process", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate", "macros", "json"] }
toml = "0.8"
dirs = "6"
async-trait = "0.1"
async-imap = { version = "0.11", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-platform-verifier = "0.7"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1", features = ["zeroize_derive"] }
rand = "0.8"
tokio-util = "0.7"
ratatui = "0.29"
crossterm = "0.28"
keyring = { version = "3.6", features = ["apple-native", "linux-native-sync-persistent", "crypto-rust"] }
mime_guess = { version = "2", default-features = false }
arboard = { version = "3", default-features = false }

[dev-dependencies]
mockall = "0.14"
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Opt-in build profile for users running postblox locally and willing to
# trade portability for raw throughput. Inherits release, but flips
# opt-level back to "3" for vectorisation-friendly codegen on the parser
# and IPC hot paths. Pair with `RUSTFLAGS="-C target-cpu=native"` for the
# full speed-up — the profile alone keeps generic-CPU codegen so CI and
# distro builds stay reproducible.
#
# Build with:
#   RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
#
# Not used by CI; not yet recommended in README. The C-H1 review item in
# `plans/rust-skills-review.md` re-evaluates whether the default release
# profile should switch to opt-level = 3.
[profile.release-native]
inherits = "release"
opt-level = 3
